--- a/src/console/index.html
+++ b/src/console/index.html
@@ -7,123 +7,120 @@
     <link rel="stylesheet" href="/console/styles.css" />
   </head>
   <body>
-    <div class="console">
-      <header class="console__header">
-        <div>
-          <p class="console__eyebrow">Bloom Console</p>
-          <h1>Banking you can talk to.</h1>
-          <p class="console__subhead">Reference client for the Bloom Kernel. Ask. Verify. Approve. Execute. Receipt.</p>
+    <div class="app">
+      <header class="topbar">
+        <div class="topbar__left">
+          <div class="wordmark">Bloom</div>
+          <div class="available">
+            <span class="available__label">Available</span>
+            <span class="available__value" id="availableValue">—</span>
+            <span class="available__meta" id="availableUpdated">Updated just now</span>
+          </div>
         </div>
-        <div class="status" id="statusBadge">Disconnected</div>
+        <div class="topbar__right">
+          <div class="status" id="statusBadge">Disconnected</div>
+          <button class="btn btn--ghost" id="detailsButton" type="button">Details</button>
+        </div>
       </header>
 
-      <section class="card" id="sessionPanel">
-        <div class="card__header">
-          <h2>Unlock Console</h2>
-          <p>Local session auth. No API keys in your browser.</p>
-        </div>
-        <div class="grid">
-          <label class="field">
-            <span>Console password</span>
+      <section class="session" id="sessionPanel">
+        <div class="session__card">
+          <h2>Welcome back</h2>
+          <p>Local access only. No API keys in your browser.</p>
+          <div class="field">
+            <span>Password</span>
             <input
               id="passwordInput"
               type="password"
               placeholder="Set CONSOLE_PASSWORD or leave blank on localhost"
               autocomplete="current-password"
             />
-          </label>
-          <label class="field" id="bootstrapTokenWrap" hidden>
+          </div>
+          <div class="field" id="bootstrapTokenWrap" hidden>
             <span>Bootstrap code</span>
             <input id="bootstrapTokenInput" placeholder="Operator-provided code" autocomplete="off" />
-          </label>
+          </div>
+          <div class="actions">
+            <button class="btn btn--primary" id="loginButton" type="button">Enter Console</button>
+            <button class="btn btn--ghost" id="importButton" type="button">Import existing kernel</button>
+          </div>
+          <div class="advanced" id="createPanel" hidden>
+            <p class="hint">Advanced: create a new Bloom in this kernel.</p>
+            <div class="field">
+              <span>Type CREATE to confirm</span>
+              <input id="createConfirmInputLogin" placeholder="Type CREATE" autocomplete="off" />
+            </div>
+            <button class="btn btn--danger-outline" id="createButtonLogin" type="button">
+              Create new Bloom (advanced)
+            </button>
+          </div>
+          <p class="error" id="sessionError"></p>
+          <p class="hint" id="sessionHint">Using another kernel? Set DB_PATH in .env and restart.</p>
         </div>
-        <div class="actions">
-          <button class="btn btn--primary" id="loginButton">Enter Console</button>
-        </div>
-        <p class="error" id="sessionError"></p>
-        <p class="hint" id="sessionHint">
-          First run creates a single Bloom account. Set <code>CONSOLE_BOOTSTRAP_TOKEN</code> to require a code.
-        </p>
       </section>
 
-      <section class="console__main" id="consoleMain" hidden>
-        <div class="console__grid">
-          <div class="chat card">
-            <div class="card__header">
-              <h2>Talk to Bloom</h2>
-              <p>Ask about balance or propose a transfer. Bloom will ask for approval before execution.</p>
-            </div>
-            <div class="chat__messages" id="chatMessages"></div>
-            <form class="chat__composer" id="chatForm">
-              <input id="chatInput" placeholder="Ask: “How much do I have?”" autocomplete="off" />
-              <button class="btn btn--danger" id="stopButton" type="button">Stop</button>
+      <main class="console" id="consoleMain" hidden>
+        <div class="chat-shell">
+          <div class="chat-thread" id="chatMessages"></div>
+          <div class="chat-suggestions" id="chatSuggestions">
+            <button class="chip" data-suggestion="How much do I have?">How much do I have?</button>
+            <button class="chip" data-suggestion="Set aside $200 for rent Friday.">
+              Set aside $200 for rent Friday.
+            </button>
+            <button class="chip" data-suggestion="Can I spend $50 today?">Can I spend $50 today?</button>
+          </div>
+        </div>
+
+        <form class="composer" id="chatForm">
+          <div class="composer__inner">
+            <textarea
+              id="chatInput"
+              placeholder="Ask: How much do I have?"
+              rows="1"
+              autocomplete="off"
+            ></textarea>
+            <div class="composer__actions">
+              <button class="btn btn--ghost" id="stopButton" type="button">Stop</button>
               <button class="btn btn--primary" id="sendButton" type="submit">Send</button>
-            </form>
-            <div class="chat__pending">
-              <div class="pending__header">
-                <h3>Approvals</h3>
-                <p>Bloom never executes without your explicit approval.</p>
-              </div>
-              <div id="pendingQuotes"></div>
             </div>
           </div>
+        </form>
+      </main>
 
-          <div class="sidebar">
-            <div class="card">
-              <div class="card__header card__header--row">
-                <div>
-                  <h2>Account</h2>
-                  <p id="accountMeta">Waiting for connection...</p>
-                </div>
-                <button class="btn btn--ghost btn--small" id="logoutButton" type="button">Sign out</button>
-              </div>
-              <div class="stat">
-                <span>Available</span>
-                <strong id="availableValue">—</strong>
-              </div>
-              <div class="stat">
-                <span>Confirmed</span>
-                <strong id="confirmedValue">—</strong>
-              </div>
-              <div class="stat">
-                <span>Reserved</span>
-                <strong id="reservedValue">—</strong>
-              </div>
-              <div class="divider"></div>
-              <div class="field">
-                <span>Wallet</span>
-                <div class="inline">
-                  <input id="walletAddress" readonly value="—" />
-                  <button class="btn btn--ghost" id="copyAddress" type="button">Copy</button>
-                </div>
-              </div>
-              <p class="hint" id="fundingHint">Add funds by sending USDC to the wallet address.</p>
-              <button class="btn btn--danger-outline" id="freezeButton" type="button">Freeze Account</button>
-            </div>
-
-            <div class="card">
-              <div class="card__header">
-                <h2>Receipts</h2>
-                <p>Every action is recorded. This is the source of truth.</p>
-              </div>
-              <div class="receipt" id="receiptsList"></div>
-            </div>
+      <aside class="drawer" id="detailsDrawer" aria-hidden="true">
+        <div class="drawer__header">
+          <h2>Details</h2>
+          <button class="btn btn--ghost" id="closeDetails" type="button">Close</button>
+        </div>
+        <div class="drawer__section">
+          <h3>Wallet</h3>
+          <div class="wallet-row">
+            <div class="wallet-address" id="walletAddress">—</div>
+            <button class="btn btn--ghost" id="copyAddress" type="button">Copy</button>
           </div>
+          <p class="hint" id="fundingHint">Send USDC to this address.</p>
         </div>
-      </section>
-    </div>
-
-    <div class="modal" id="stepUpModal" hidden>
-      <div class="modal__content">
-        <h3>Approve Spend</h3>
-        <p>Step-up required. Use the code below to approve this spend.</p>
-        <div class="step-up__code" id="stepUpCode">—</div>
-        <div class="actions">
-          <button class="btn" id="stepUpCancel">Cancel</button>
-          <button class="btn btn--primary" id="stepUpApprove">Approve</button>
+        <div class="drawer__section">
+          <h3>Record</h3>
+          <div class="record-list" id="recordList"></div>
         </div>
-        <p class="hint" id="stepUpStatus"></p>
-      </div>
+        <div class="drawer__section">
+          <h3>Lock</h3>
+          <p class="hint">Stops spending immediately.</p>
+          <button class="btn btn--danger-outline" id="lockButton" type="button">Lock</button>
+        </div>
+        <div class="drawer__section drawer__section--advanced">
+          <h3>Advanced</h3>
+          <p class="hint">Create a new Bloom in this kernel.</p>
+          <div class="field">
+            <span>Type CREATE to confirm</span>
+            <input id="createConfirmInput" placeholder="Type CREATE" autocomplete="off" />
+          </div>
+          <button class="btn btn--danger-outline" id="createButton" type="button">Create new Bloom (advanced)</button>
+          <p class="error" id="createError"></p>
+        </div>
+      </aside>
+      <div class="drawer-backdrop" id="drawerBackdrop" hidden></div>
     </div>
 
     <script src="/console/app.js"></script>
